Adding meson build file and organising files

--- a/meson.build
+++ b/meson.build
@@ -7,11 +7,11 @@ gnome = import('gnome')
 
 executable(
     meson.project_name(),
-    'main.vala',
-    'Person.vala',
-    'Cat.vala',
-    'Dog.vala',
-    'Rabbit.vala',
+    'src/main.vala',
+    'src/Person.vala',
+    'src/Cat.vala',
+    'src/Dog.vala',
+    'src/Rabbit.vala',
     dependencies: [
         dependency('glib-2.0'),
         dependency('gobject-2.0')
